--- a/src/content/posts/articles/art-of-war-for-dnd-strategy-of-combat.mdx
+++ b/src/content/posts/articles/art-of-war-for-dnd-strategy-of-combat.mdx
@@ -8,6 +8,9 @@ tags:
   - Искусство войны
   - Стратегия
   - Сражение
+  - Art of War
+author: M.T.Black
+translator: D&D Модно
 ---
 
 Бомжи-убийцы - это искатели приключений, которые бродят по миру, без разбора убивая и грабя все на своем пути. Если это описание подходит к вашим играм, то эта статья может быть вам не интересна!
