--- a/src/content/posts/translations/dragon-244-warriors-of-the-wind.mdx
+++ b/src/content/posts/translations/dragon-244-warriors-of-the-wind.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Воины ветра"
-description: ПЕРЕВОД статьи из журнала Дракон № 244 про летающих существ
-date: 2024-03-13
-  - Журнал Дракон
-  - Dragon Magazine
-  - перевод
-  - Дрого
+description: "ПЕРЕВОД статьи из журнала Дракон № 244 про летающих существ"
+date: "2024-03-13"
+  - "Журнал Дракон"
+  - "Dragon Magazine"
+  - "перевод"
+  - "Дрого"
 author: Майкл Ламберт
 translator: Дрого
 ---
