--- a/public/files/angrygm-how-to-make-cool-encounters.mdx
+++ b/public/files/angrygm-how-to-make-cool-encounters.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Злой ГМ про то, как строить клевые энкаунтеры!"
-date: 2024-03-13
-description: 'ПЕРЕВОД Перевод статьи Злого ГМ-а про то как строить интересные столкновения #angrygm #gmtips #gmadvice #translate #theory #crosspost'
+description: "ПЕРЕВОД Перевод статьи Злого ГМ-а про то как строить интересные столкновения #angrygm #gmtips #gmadvice #translate #theory #crosspost"
+date: "2024-03-13"
 tags:
   - Angry GM
   - перевод
