--- a/public/files/dwarven-panteon.mdx
+++ b/public/files/dwarven-panteon.mdx
@@ -1,10 +1,18 @@
 ---
-title: "Морндинсамман – дварфийский пантеон"
+title: 
 date: "2022-07-07"
 categories: 
   - "forgottenrealms"
   - "translations-other"
   - "setting"
+---
+---
+title: "Морндинсамман – дварфийский пантеон"
+description: "Описание дварфийского пантеона"
+date: 2024-03-13
+tags:
+  - дварфы
+  - пантеон
 ---
 
 В совокупности пантеон дварфов упоминается как Морндинсамман, что переводится как «Братья по щиту наверху» или «Высшие дварфы». Пантеон возглавляет Морадин, создатель дварфов.
