--- a/src/content/posts/translations/art-of-war-making-plans.mdx
+++ b/src/content/posts/translations/art-of-war-making-plans.mdx
@@ -4,6 +4,7 @@ description: отрывок THE ART OF WAR FOR D&D PLAYERS
 date: '2023-05-17'
 tags:
   - Искусство войны для D&D
+  - Art of War
   - перевод
   - Советы игрокам
 author: M.T.Black
@@ -127,29 +128,18 @@ translator: Featona
 > Будучи сильным, кажись слабым. Будучи храбрым, кажись нерешитель­ным. Будучи собранным, кажись рассеянным. Обладая многим, делай вид, будто у тебя ничего нет. Наступая, покажи отступление. Двигаясь быстро, кажись медленным. Буду­чи в одном месте, показывайся в другом
 
 Обман — очень мощная тактика, более могущественная, чем многие думают.
-Хорошо спланированный и исполненный обман может дезорганизовать оборону
-противника и дать вам шанс разгромить его. Есть множество вариантов, как вы
-можете обмануть противника, включая сокрытие вашего настоящего местоположения,
-личности, количества, намерений и возможностей.
+Хорошо спланированный и исполненный обман может дезорганизовать оборону противника и дать вам шанс разгромить его. Есть множество вариантов, как вы можете обмануть противника, включая сокрытие вашего настоящего местоположения, личности, количества, намерений и возможностей.
 
 Давайте рассмотрим практический пример с Грудд Хауг, логовом горных
-великанов в Громе Штормового Короля. Ваша цель в этом приключении состоит в
-том, чтобы проникнуть в цитадель и украсть раковину телепортации, возможно,
-уничтожив по пути горных великанов.
+великанов в Громе Штормового Короля. Ваша цель в этом приключении состоит в том, чтобы проникнуть в цитадель и украсть раковину телепортации, возможно, уничтожив по пути горных великанов.
 
 Конечно, вы можете выполнить фронтальную атаку, направившись прямо ко
-входу. Но если вы сделаете это, то хобгоблины на сторожевой башне увидят вас и
-позвонят в сигнальный колокол, затем гигант заблокирует входную дверь валуном,
-и вся твердыня внезапно находится в состоянии повышенной готовности. Ваша
-задача стала намного сложнее.
+входу. Но если вы сделаете это, то хобгоблины на сторожевой башне увидят вас и позвонят в сигнальный колокол, затем гигант заблокирует входную дверь валуном, и вся твердыня внезапно находится в состоянии повышенной готовности. Ваша задача стала намного сложнее.
 
-Лучший вариант — скрыть свой подход. Как говорит Сунь
-Цзы: «когда мы рядом, мы должны заставить врага поверить, что мы далеко».
+Лучший вариант — скрыть свой подход. Как говорит Сунь Цзы: «когда мы рядом, мы должны заставить врага поверить, что мы далеко».
+
 Очевидный способ сделать это — заклинание невидимости, позволяющее
-вам пройти прямо через входную дверь. Вы также можете использовать облако тумана, чтобы снизить видимость в области и обеспечить укрытие для вашего
-подхода, или использовать маскировку, чтобы
-принять облик орков. Есть множество других заклинаний, которые могут помочь в
-данной ситуации.
+вам пройти прямо через входную дверь. Вы также можете использовать облако тумана, чтобы снизить видимость в области и обеспечить укрытие для вашего подхода, или использовать маскировку, чтобы принять облик орков. Есть множество других заклинаний, которые могут помочь в данной ситуации.
 
 А как насчет немагических вариантов? Люди использовали темноту как
 прикрытие для военных действий с незапамятных времен. Вы могли бы также
@@ -170,24 +160,24 @@ translator: Featona
 — отделить врага, оттянуть его, чтобы вы могли сражаться с ним индивидуально
 или небольшими группами. Есть несколько способов достижения этого:
 
-Еда. Если вы сражаетесь с
-большой группой зверей, вы можете использовать пищу для их разделения.
-Например, свежая свинья, брошенная рядом с стаей волков, заставит хотя бы
-нескольких из них отделиться от стаи.
+Еда. Если вы сражаетесь с большой группой зверей, вы можете использовать пищу для их разделения.
+Например, свежая свинья, брошенная рядом с стаей волков, заставит хотя бы нескольких из них отделиться от стаи.
 
 Сокровища. Тот же самый эффект
-может быть достигнут с немного более разумными монстрами при использовании
-сокровищ. Возможно, по коридорам бродит большая группа гоблинов. След из
-золотых монет может легко расколоть группу или привести ее в замешательство.
+может быть достигнут с немного более разумными монстрами при использовании сокровищ. Возможно, по коридорам бродит большая группа гоблинов. След из золотых монет может легко расколоть группу или привести ее в замешательство.
 
 Отвлечение. Если монстры
-находятся в фиксированном месте, вы можете попробовать вытянуть их оттуда,
-используя неожиданный звук. Например, большая группа насекомых сидит в пещере.
-Громкий звонок в колокол или звук рога может привести к тому, что небольшое
-количество существ покинет пещеру и отправится на разведку.
+находятся в фиксированном месте, вы можете попробовать вытянуть их оттуда, используя неожиданный звук. Например, большая группа насекомых сидит в пещере.
+Громкий звонок в колокол или звук рога может привести к тому, что небольшое количество существ покинет пещеру и отправится на разведку.
 
-Провокация. Могущественные
-существа часто имеют огромное эго и чувствительны к насмешкам. Если вы войдете
-в тронный зал короля Снурре и оскорбите его, прежде чем убежать, он, скорее
-всего, пошлет за вами своих адских гончих. Это может быть очень эффективным
-способом вывести вражеские силы из хорошо укрепленного места.
+Провокация. Могущественные существа часто имеют огромное эго и чувствительны к насмешкам. Если вы войдете в тронный зал короля Снурре и оскорбите его, прежде чем убежать, он, скорее всего, пошлет за вами своих адских гончих. Это может быть очень эффективным способом вывести вражеские силы из хорошо укрепленного места.
+
+---
+
+[Искусство войны для D&D — Проведение кампании](https://cyborgsandmages.com/posts/articles/art-of-war-campaigns)
+
+[Искусство войны для D&D — Составление планов](https://cyborgsandmages.com/posts/translations/art-of-war-making-plans)
+
+[Искусство войны для D&D — Составление планов](https://cyborgsandmages.com/posts/articles/art-of-war-making-plans)
+
+[Искусство войны для D&D — Стратегия боя](https://cyborgsandmages.com/posts/articles/art-of-war-for-dnd-strategy-of-combat)
