--- a/src/content/posts/articles/art-of-war-making-plans.mdx
+++ b/src/content/posts/articles/art-of-war-making-plans.mdx
@@ -8,9 +8,9 @@ tags:
   - Искусство войны
   - Стратегия
   - Сражение
+  - Искусство войны для D&D
   - Art of War
 author: M.T.Black
-translator: D&D Модно
 ---
 
 «Искусство войны» - это древний и почитаемый текст, описывающий военную тактику и стратегию. Написанный блестящим китайским стратегом и мыслителем по имени Сунь Цзы, на протяжении сотен лет он был выдающимся военным учебником в Восточной Азии.
@@ -128,3 +128,13 @@ translator: D&D Модно
 ![](https://pp.userapi.com/c849236/v849236241/19dc09/A0u34cCecP4.jpg)
 
 > первая часть THE ART OF WAR FOR D&D PLAYERS — перевод [D&D Модно](https://vk.com/dnd_modno)
+
+---
+
+[Искусство войны для D&D — Проведение кампании](https://cyborgsandmages.com/posts/articles/art-of-war-campaigns)
+
+[Искусство войны для D&D — Составление планов](https://cyborgsandmages.com/posts/translations/art-of-war-making-plans)
+
+[Искусство войны для D&D — Составление планов](https://cyborgsandmages.com/posts/articles/art-of-war-making-plans)
+
+[Искусство войны для D&D — Стратегия боя](https://cyborgsandmages.com/posts/articles/art-of-war-for-dnd-strategy-of-combat)
