Индекс материалов по полным руководствам AD&D 2ed

--- a/src/content/posts/articles/art-of-war-campaigns.mdx
+++ b/src/content/posts/articles/art-of-war-campaigns.mdx
@@ -8,6 +8,7 @@ tags:
   - Искусство войны
   - Стратегия
   - Сражение
+  - Искусство войны для D&D
   - Art of War
 author: M.T.Black
 translator: D&D Модно
@@ -107,3 +108,13 @@ translator: D&D Модно
 **Шест, 10-футовый.** У пресловутого 10-футового шеста есть много применений. Вы можете простукивать землю перед собой, чтобы найти растяжки или нажимные пластины. Вы можете использовать его для прикосновения к опасно выглядящим предметам или чтобы тыкнуть того вроде бы мертвого монстра. Вы можете использовать его, чтобы проверить глубину мутного озера или поковырять кучу мусора. Эти шесты по общему признанию довольно громоздки и могут легко сломаться, и поэтому некоторые люди предпочитают 5-футовый шест, сделанный из стали.
 
 > отрывок THE ART OF WAR FOR D&D PLAYERS — перевод [D&D Модно](https://vk.com/dnd_modno)
+
+---
+
+[Искусство войны для D&D — Проведение кампании](https://cyborgsandmages.com/posts/articles/art-of-war-campaigns)
+
+[Искусство войны для D&D — Составление планов](https://cyborgsandmages.com/posts/translations/art-of-war-making-plans)
+
+[Искусство войны для D&D — Составление планов](https://cyborgsandmages.com/posts/articles/art-of-war-making-plans)
+
+[Искусство войны для D&D — Стратегия боя](https://cyborgsandmages.com/posts/articles/art-of-war-for-dnd-strategy-of-combat)
