--- a/src/content/posts/articles/art-of-war-for-dnd-strategy-of-combat.mdx
+++ b/src/content/posts/articles/art-of-war-for-dnd-strategy-of-combat.mdx
@@ -8,6 +8,7 @@ tags:
   - Искусство войны
   - Стратегия
   - Сражение
+  - Искусство войны для D&D
   - Art of War
 author: M.T.Black
 translator: D&D Модно
@@ -86,3 +87,13 @@ translator: D&D Модно
 - Сколько способностей класса или подкласса у вас осталось?
 
 Терпение здесь часто является ключевым. Иногда вам просто нужно отдохнуть перед началом финальной атаки. Статья Проведение кампании описывает управление ресурсами более подробно.
+
+---
+
+[Искусство войны для D&D — Проведение кампании](https://cyborgsandmages.com/posts/articles/art-of-war-campaigns)
+
+[Искусство войны для D&D — Составление планов](https://cyborgsandmages.com/posts/translations/art-of-war-making-plans)
+
+[Искусство войны для D&D — Составление планов](https://cyborgsandmages.com/posts/articles/art-of-war-making-plans)
+
+[Искусство войны для D&D — Стратегия боя](https://cyborgsandmages.com/posts/articles/art-of-war-for-dnd-strategy-of-combat)
