--- a/src/content/posts/articles/vikings-5.mdx
+++ b/src/content/posts/articles/vikings-5.mdx
@@ -1,6 +1,6 @@
 ---
-title: ГЛАВА 5. МОНСТРЫ СКАНДИНАВИИ
-description: ГЛАВА 5. МОНСТРЫ СКАНДИНАВИИ
+title: "Кампания викингов. ГЛАВА 5. МОНСТРЫ СКАНДИНАВИИ"
+description: "Кампания викингов. ГЛАВА 5. МОНСТРЫ СКАНДИНАВИИ"
 date: 2024-03-13 
 tags:
   - Викинги
