--- a/src/content/posts/cored20rpg/magic-alternative-5e-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-alternative-5e-spells.mdx
@@ -8,7 +8,33 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
-Альтернативные заклинания
+## СПЕЦИФИЧЕСКИЕ И УНИКАЛЬНЫЕ ЗАКЛИНАНИЯ
+
+### Специфические заклинания
+
+Специфические заклинания присутствуют в списке заклинаний только одного или двух классов, но другие классы могут их взять, если им это позволяют классовые или другие особенности.
+
+### Уникальные заклинания
+
+В отличие от специфических заклинаний, если у заклинания есть пометка, что оно является уникальным, это означает, что данное заклинание доступно только определенному классу, и никакая классовая особенность, позволяющая получить доступ к заклинаниям других классов не может быть использована для получения доступа к этому классу.
+
+### Классовые списки заклинаний
+
+В списках ниже приведены заклинания, которые используются каждым классом. 
+
+Дополнительно после названия заклинания в скобках может быть указано требует ли заклинание Концентрации (Кон), является ли заклинание ритуальным (Рит), уникальным для этого класса (Уник) и имеются ли прочие особенности (*).
+
+Заклинания отсортированы по алфавиту внутри каждого круга заклинаний и школы заклинаний.
+
+## Боевая концентрация
+
+**Боевая концентрация** – это особый вид концентрации, который не может быть прерван получением урона или вредоносными эффектами окружающей среды. Боевая концентрация прекращается либо по окончании длительности заклинания, либо если заклинатель принял решение прекратить концентрироваться (не требуется действие), либо если было сотворено другое заклинание с Концентрацией (обычной или боевой).
+
+## УСТОЙЧИВОСТЬ К ЗАКЛИНАНИЯМ
+
+**Устойчивость к заклинаниям** – это сверхъестественная особенность, которая есть у некоторых существ и может быть получена от некоторых волшебных предметов. Если у существа есть особенность **Устойчивость к заклинаниям**, то при воздействии на него любого заклинания заклинатель должен успешно пройти проверку заклинательной характеристики с бонусом равным кругу используемой ячейки заклинания против КС равного показателю **Устойчивости к заклинаниям**. При провале заклинание не оказывает воздействие на цель. 
+
+Устойчивость заклинаний действует как на помогающие заклинания так и вредящие.
 
 ---
 
