--- a/src/content/posts/cored20rpg/magic-school-spell-lists.mdx
+++ b/src/content/posts/cored20rpg/magic-school-spell-lists.mdx
@@ -8,7 +8,118 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
-Списки заклинаний по школам
+**Дата обновления:** 15.03.2024
+
+## ШКОЛЫ МАГИИ
+
+Почти все заклинания принадлежат к одной из восьми школ магии. Школы магии – это группа родственных заклинаний, которые работают похожим образом. Небольшое количество заклинаний (например, обнаружить магию, читать магию и желание) универсальны и не принадлежат ни к какой школе. 
+
+### Школы магии 
+
+Магические академии объединяют заклинания в восемь  категорий, так называемых школ магии. Учёные, особенно  волшебники, применяют эти категории ко всем заклинаниям,  веря, что любая магия работает примерно одинаково, вне зави­ симости от её источника, будьте знания или божественная мощь. 
+
+Школы полезны только для описания заклинаний. Для  них нет особых игровых правил, хотя некоторые правила  и ссылаются на школы.
+. Школу магического эффекта обычно можно определить с помощью таких эффектов, как обнаружение магии.
+
+## ПРЕГРАЖДЕНИЕ (ОГРАЖДЕНИЕ, ПРЕГРАЖДЕНИЕ) [ABJURATION]
+
+Заклинания преграждения — защитные, хотя некоторые  можно применять и в нападении. Они создают магические  барьеры, нейтрализуют вредное воздействие, вредят  нарушителям или изгоняют существ на иные планы бытия.  
+
+В школе преграждения собраны защитные заклинания. Они создают физические или волшебные барьеры, нейтрализуют волшебные или физические способности, вредят грабителям или даже изгоняют субъект заклинания на другое измерение. Характерные заклинания включают: защиту от добра и зла, рассеивание магии, антимагическое поле и изгнание.
+
+Если в пределах 10 футов одного заклинания преграждения активно другое в течение 24 часов и более, магические поля вмешиваются друг в друга и создают еле видимые колебания энергии. КС для нахождения таких заклинаний с умением Поиск понижается на 4. 
+
+Если преграждение создает барьер, который удерживает некоторые типы существ, барьер не может использоваться для того, чтобы вытолкнуть эти существа. Если вы навязываете таким существам барьер, вы чувствуете сильное давление на барьер. Если вы продолжаете применять заклинание, вы ломаете заклинание.
+
+## ВОПЛОЩЕНИЕ (ВЫЗЫВАНИЕ) [CONJURATION]
+
+Заклинания воплощения перемещают объекты и существ  с места на место. Некоторые из них призывают существ, чтобы  те сражались на стороне заклинателя, другие позволяют ему  телепортироваться самому. Иные заклинания воплощения  позволяют создавать объекты или эффекты из ничего.  
+
+С помощью вызывания к вам приходят манифестации объектов, существ или неких форм энергии **(призывание)**, фактически переносятся существа с других бытийных измерений на ваше **(зов)**, проводится лечение **(лечение)** или создаются такие объекты или эффекты на месте **(сотворение)**. Существа, которых вы обычно вызываете, повинуются вашим командам, хотя и не всегда. Характерные заклинания включают: призыв монстра, лечение ран, оживление мертвеца, железная стена и слово силы.
+
+Существа или объект, вселенные в существо или перенесенные к вам заклинанием вызывания, не могут появляться внутри другого существа или предмета, и при этом не могут появляться в пустоте. Они должны появиться на открытой местности на поверхности, способной выдержать их. Существо или объект должны появиться в пределах диапазона заклинания, но они не должны оставаться в пределах диапазона.
+
+**Зов:** Заклинание полностью переносит существо с другого измерения на ваше. Заклинание предоставляет существу одноразовую способность вернуться на родной план, хотя заклинание может ограничивать обстоятельства, при которых это станет возможным. Вызванные существа действительно умирают, когда их убивают; они не исчезают и преобразовываются, как принесенные заклинанием призывания (см. ниже). Длительность зовущего заклинания мгновенна, что означает, что вызываемое существо не может быть рассеяно.
+
+Заклинания, которые вызывают мощных существ внешнего плана (планарные узы) наиболее полезны, когда колдун имеет волшебную ловушку, чтобы поймать в нее вызванное существо. Самый простой тип ловушки – заклинание магический круг (магический круг против хаоса, магический круг против зла, и т.д.). Когда это заклинание сосредоточено вовнутрь, оно связывает вызванное существо максимум на 24 часа за каждый уровень заклинателя, при условии, что вы используете заклинание, которое вызывает существо, в пределах 1 раунда после сотворения магического круга. Однако, магический круг как ловушка оставляет желать лучшего. Если круг из порошкообразного серебра, насыпанного в процессе сотворения заклинания, нарушен, то действие немедленно прекращается. Пойманное существо не может делать ничего, чтобы нарушить круг само, непосредственно или косвенно, но другие существа могут это сделать. Если вызываемое существо имеет сопротивляемость заклинаниям, то нужно проверять ловушку один раз в день. Если вы не в состоянии преодолеть сопротивляемость заклинаниям, существо вырывается на свободу, уничтожая круг. 
+
+Существо, способное к любой форме межпланарного путешествия (способности: астральная проекция, мерцание, дверь между измерениями, эфирность, врата, лабиринт, сдвиг плана, хождение в тени, телепортация, и подобные) может просто покинуть круг этими средствами. Вы можете предотвратить межпланарное бегство существа, использовав на нем заклинание планарный якорь, но вы должны сотворить заклинание перед действиями существа. Если оно успешно, действие якоря продолжается, пока действует магический круг. 
+
+Существо не может переступить магический круг, но это не распространяется на его дистанционные атаки (метательное оружие, заклинания, магические способности и т.д.). Существо может нападать на любую цель, которую оно может достать своими атакам, кроме самого круга
+
+Вы можете использовать особую диаграмму (плоская замкнутая фигура, усиленная различными волшебными символами), чтобы сделать ловушку более безопасной. Рисунок диаграммы вручную занимает 10 минут и требует проверки Магии (КС 20). Мастер делает эту проверку тайно. Если проверка терпит неудачу, диаграмма неэффективна. Вы можете «взять 10» (см.) при рисунке диаграммы, если никуда не торопитесь. Это также требует полных 10 минут. Если время вообще не играет роли, и вы посвящаете этой задаче 3 часа 20 минут, вы можете «взять 20». Успешная диаграмма позволяет вам накладывать заклинание планарного якоря на ловушку в течение одного раунда перед сотворением любого заклинания вызывания. Якорь удерживает любых вызванных существ в диаграмме в течение 24 часов за каждый уровень заклинателя. Существо не может использовать свою сопротивляемость заклинаниям против ловушки, созданной с помощью диаграммы, и ни одна способность не позволит ему пересечь диаграмму. Если существо пробует проверку Харизмы, чтобы вырваться на свободу из ловушки (см. заклинания малые планарные узы, планарные узы и великие планарные узы), КС увеличивается на 5. Существо немедленно освобождается, если что-либо нарушает диаграмму — даже соломинка, положенная поперек нее. Однако, существо не может нарушить диаграмму напрямую или косвенно, как указывалось выше.
+
+**Сотворение:** Заклинание манипулирует вопросами сотворения объектов или существ в месте, которое определяет заклинатель (субъекты с ограничениями, указанными выше для вызова). Если заклинание имеет длительность не мгновенную, магия скрепляет созданное, и когда заклинание прекращается или рассеивается, созданное существо или объект исчезают без следа. Если заклинание имеет мгновенную длительность, сотворенный объект или существо просто творятся посредством магии. Это продолжается неопределенно долго и их существование не зависит более от магии.
+
+Призывание: Заклинание немедленно переносит существо или объект к месту, которое вы выбрали. Когда заклинание заканчивается или рассеивается, вызванное существо немедленно отправляется обратно, но вызванный объект не отправляется назад, если в описании заклинания указывается обратное. Призванное существо также уходит, если оно убито или его хиты понижаются до 0. Оно не умирает на самом деле. Существу требуется 24 часа, чтобы восстановиться, в течение этого времени оно не может быть призвано снова.
+
+Когда заклинание, которое призвало существо, заканчивается, и существо исчезает, все заклинания, которые оно сотворило, тоже оканчиваются (если они еще не окончились). 
+
+## ПРОРИЦАНИЕ (ПРЕДСКАЗАНИЕ) [DIVINATION]
+
+Заклинания прорицания раскрывают сведения. Они  позволяютузнать забытые тайны и проблески будущего,  понять, что скрывают иллюзии, или увидеть существ и места,  которые далеко отсюда.  
+
+Заклинания предсказания позволяют вам познать тайны давнего прошлого, предсказывать будущее, находить скрытые вещи и рассеивать вводящие в заблуждение заклинания. Характерные заклинания: идентификация, обнаружить мысли, яснослышание/ясновидение и истинное видение.
+
+Многие заклинания предсказания имеют конусообразные области воздействия (см.). Эта область движется с вами и простирается по направлению вашего взгляда. Конус определяет область, которую вы можете охватывать за каждый раунд. Если вы изучаете одну и ту же область в течение многих раундов, вы можете зачастую получить дополнительную информацию, как указано в описании заклинания.
+
+## ОЧАРОВАНИЕ [ENCHANTMENT]
+
+Заклинания очарования влияют на разумы других, меняя  их поведение или управляя им. Такие заклинания заставляют  врагов считать заклинателя другом, вынуждают существ  поступать иначе или даже подчиняют их, как марионеток.  
+
+Очарование влияют на разум других, воздействуя или управляя существами. Характерные заклинания включают: очаровать существо, совет и подчинение.
+
+Все чары воздействуют на разум. Два типа чар имеют разный вид воздействия:
+
+**Зачарование:** Заклинание изменяет представление персонажа о вас, обычно делая так, что он видит вас добрым другом. 
+
+**Принуждение:** Заклинание заставляет существо действовать определенным **образом или изменяет работу его разума. Некоторые заклинания определяют действия персонажа (или воздействуют на него), некоторые позволяют вам управлять действиями персонажа, когда вы творите заклинание, а остальные дают вам полный контроль над существом. 
+
+## ЭВОКАЦИЯ (СОЗИДАНИЕ) [EVOCATION]
+
+Заклинания эвокации задействуют источники магической  энергии, вызывая различные эффекты — от огненных взрывов до исцеления ран позитивной энергией.  
+
+Заклинания эвокации манипулируют энергией или открывают невидимые источники силы для получения желаемого результата. В конце концов они творят нечто из ничего. Многие заклинания созидают захватывающие эффекты, а заклинания эвокации могут наносить большой урон. Характерные заклинания: волшебная стрела, огненный шар и удар молнии. 
+
+## ИЛЛЮЗИИ [ILLUSION]
+
+Заклинания иллюзии обманывают умы и чувства других.  Они заставляют их видеть то, чего нет, не видеть того, что есть,  слышать призрачные звуки и вспоминать то, чего никогда  не было. Некоторые иллюзии создают образы, видимые  всем, но самые коварные—те, что вкладывают их прямо  в голову жертвы.  
+
+Заклинания иллюзий обманывают чувства или разум других. Они заставляют людей видеть вещи, которых нет, не видеть то, что есть, слышат странные звуки или помнить вещи, которые никогда не происходили. Характерные иллюзии: безмолвный образ, невидимость и вуаль. Иллюзии бывают пяти видов: фантомы, мороки, узоры, фантазии и тени.
+
+**Фантомы:** Заклинание вымысла создает ложные ощущения. Те, кто воспринимает вымысел, воспринимает то же самое, а не свои собственные слегка различные версии вымысла. (Это не персонифицированное ментальное впечатление.) Вымыслы не могут заставить что-то выглядеть иначе. Вымысел, который включает звуковые эффекты, не может дублировать понятную речь, если описание заклинания не указывает иначе. Если понятная речь возможна, она должна быть на языке, которым вы владеете. Если вы пытаетесь дублировать язык, который вы не знаете, изображение выдает невнятное бормотание. Точно так же вы не можете сделать визуальную копию чего-либо, если вы не знаете, как это выглядит.
+
+Поскольку фантомы и мороки (см. ниже) нереальны, они не могут производить настоящие воздействия так, как могут другие виды иллюзий. Они не могут нанести урон объектам или существам, поддерживать вес, обеспечивать пищу, освещать тьму или давать защиту от стихий. Следовательно, эти заклинания полезны для сбивания с толку и для задержки противников, но бесполезны непосредственно для атаки на них. Например, можно использовать заклинание безмолвный образ, чтобы создать иллюзорный дом, но дом не даст никакой защиты от дождя. Умный заклинатель, однако, может потрудиться и сделать дом старым и ветхим, чтобы дождь, капающий на жильцов, казалось, капает с прохудившейся крыши.
+
+**Мороки:** Заклинание морока подменяет ощущения жертвы, заставляя ее видеть, чувствовать, обонять или слышать нечто иное.
+Узоры: Подобно фантомам, заклинания узоров создают образы, которые другие могут видеть, но узоры также воздействует на разум тех, которые видят их или трогают. Все узоры – это воздействующие на разум заклинания.
+
+**Фантазии:** Заклинания фантазии создают ментальный образ, который могут чувствовать обычно только заклинатель и субъект заклинания (или субъекты). Это впечатление находится полностью в разуме жертвы. Это персонифицированное ментальное впечатление. (Оно полностью в их голове, а не подмененное изображение чего-то реального.) Третьи лица, наблюдающие или изучающие место действия, совершенно не замечают фантазию. Все фантазии – это воздействующие на разум заклинания.
+
+**Тени:** Заклинания теней создают нечто, что является частично реальным (квази-реальным). Заклинатель ткет это от энергий высшего измерения. Такие иллюзии могут иметь реальные эффекты. Если существо получает урон от иллюзии теней, тот этот урон настоящий.
+Спасброски и Иллюзии (Неверие): Существа, встречающиеся с эффектом иллюзий, обычно не получают спасбросков, чтобы признать их иллюзорными, пока не станут их тщательно осматривать или взаимодействовать с ними каким-либо образом. Например, если бы отряд столкнулся с иллюзорной отрезок пола, персонаж впереди получил бы спасбросок, если бы он остановился и изучил бы пол, или если бы он исследовал пол. Аналогично, если иллюзорный великан нападает на персонажа, персонаж получает спасбросок, потому что он взаимодействует с великаном.
+
+Успешный спасбросок против иллюзии показывает, что это фальшивка, но фантом или фантазия остается как прозрачный контур. Например, персонаж, делающий успешный спасбросок против фантома иллюзорной секции пола, знает, что «пол» небезопасен для прохода, и может видеть то, что внизу (свет позволяет), но он все равно замечает местонахождение фантома.
+
+Неудавшийся спасбросок указывает, что персонаж не в состоянии заметить, что здесь что-то не так. Персонаж перед лицом неопровержимых доказательств иллюзии не нуждается в спасбросках. Персонаж, провалившийся сквозь иллюзорный пол в яму, знает, что что-то не так, как и тот, кто тратит несколько раундов на обследование той же самой иллюзии. Если какой-либо зритель успешно не-верит в иллюзию и сообщает об этом факте другим, каждый такой зритель совершает проверки и спасброски против этой иллюзии с преимуществом
+
+## НЕКРОМАНТИЯ [NECROMANCY]
+
+Заклинания некромантии управляют энергией жизни и смерти. Они могут дать избыточный запас жизненной силы, высосать энергию из другого существа и даже вернуть  мёртвых к жизни.  
+
+Создавать нежить с помощью некромантии, например  заклинанием оживление мертвецов,—дело недоброе, только  злые заклинатели часто используют подобную магию.  Заклинания некромантии имеют дело с энергией смерти. Заклинания, включающие в себя создание нежити, составляют большую часть науки этой школы. Характерные заклинания: устрашение, анимировать труп и перст смерти. 
+
+**Лечение:** Некоторые божественные вызывания излечивают существ или даже возвращают их к жизни. Сюда входят заклинания лечения/
+
+## ТРАНСМУТАЦИЯ (ПРЕВРАЩЕНИЕ) [TRANSMUTATION]
+
+Заклинания превращения меняют свойства существ,  объектов и окружения. Они могут превратить врага  в безобидное создание, увеличить силу ваших союзников,  заставить предмет перемещаться по воле заклинателя или  позволить существу быстрее исцеляться от ран.  
+Заклинания превращения изменяют свойства некоторых существ, вещей или условий. Превращение обычно изменяет только одно качество одновременно, но это может быть любое качество. Характерные заклинания: увеличение, уменьшение, превращение и смена формы.
+
+
+## ДРУГИЕ ШКОЛЫ ЗАКЛИНАНИЙ
+
+Официальные классические школы заклинаний - не единственный способ обозначения заклинаний, применявшийся пользователями магии на протяжении многих веков. В мультивселенной существует практически бесконечное множество школ заклинаний: одни основаны на элементальных источниках (звери, Огонь, растения, тень, вода и т.д.), другие - на эффектах (внушение, исцеление и т.д.). Хотя заклинание может относиться только к одной классической школе заклинаний, оно может принадлежать к любому количеству других школ заклинаний. Эти школы заклинаний не имеют собственных правил, но могут упоминаться в других правилах игры. Например, в описании существа может быть указано, что он может сотворение любого заклинания из школы огня. 
 
 ---
 
