--- a/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
@@ -10,6 +10,8 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
+**Дата обновления:** 15.03.2024
+
 Заклинания, измененные в Core d20 RPG по сравнению с пятой редакцией D&D и описание этих изменений.
 
 Изменения можно разделить на три группы:
