--- a/src/content/posts/forgotten-realms/elven-noble-houses-and-title.mdx
+++ b/src/content/posts/forgotten-realms/elven-noble-houses-and-title.mdx
@@ -1,7 +1,7 @@
 ---
 title: Эльфийские дворянские дома и титулы
 description: ПЕРЕВОД заметки Эрика Бойда про эльфийские дворянские дома и титулы в фаэруне
-date: 2024-03-19Z
+date: 2024-03-19
 tags:
   - Забытые Королевства
   - Фаэрун
