--- a/src/content/posts/cored20rpg/feats.mdx
+++ b/src/content/posts/cored20rpg/feats.mdx
@@ -58,6 +58,36 @@ author: Антон "Palant" Палихов
 
 Если черта дает повышение характеристики, то оставшаяся часть черты может быть взята как талант.
 
+## КАТЕГОРИИ ЧЕРТ
+
+### Сражение
+
+Эти черты рекомендованы персонажам, которые в сражении используют оружие.
+
+### Магия
+
+Заклинательные черты расширяют или улучшают способы персонажа оперировать заклинаниями
+
+### Личностные черты
+
+Эта категория содержит в себе черты, связанные с личностью или особыми талантами персонажа.
+
+### Навыки и умения
+
+Черты из категории «Навыки и умения» связаны с получением или использованием навыков и умений.
+
+### Предыстория
+
+В этой категории представлены черты, которые связаны с предысториями и соответственно характерны для определенных категорий.
+
+### Происхождение
+
+Эти черты персонаж может получить из-за своей расы.
+
+### Региональные
+
+Эти черты связаны с определенной местностью или типом местности.
+Класс
 
 
 ## <a name="_toc160548032"></a>Описания черт
