ссылка на стражника

--- a/src/content/posts/cored20rpg/bestiary-1.mdx
+++ b/src/content/posts/cored20rpg/bestiary-1.mdx
@@ -9,6 +9,9 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
+
+[Стражник](https://cyborgsandmages.com/posts/cored20rpg/bestiary-guard-statblock)
+
 ---
 
 [БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
