--- a/src/content/posts/cored20rpg/bestiary-1.mdx
+++ b/src/content/posts/cored20rpg/bestiary-1.mdx
@@ -105,9 +105,9 @@ author: Антон "Palant" Палихов
 >
 > **_Чувствительность к солнечному свету._** Находясь на солнечном свету, дроу совершает с помехой броски атаки и проверки Мудрости (Восприятия), основанные на зрении.
 >
-> **_СПЕЦИАЛЬНОЕ СНАРЯЖЕНИЕ_**
+> **_СПЕЦИАЛЬНОЕ СНАРЯЖЕНИЕ_** 1 *зелье лечения*,
 >
-> **_СНАРЯЖЕНИЕ_**
+> **_СНАРЯЖЕНИЕ_** Короткий меч, ручной арбалет, колчан для арбалетных болтов, щит, кожаный доспех.
 >
 > ### ДЕЙСТВИЯ
 >
@@ -119,6 +119,51 @@ author: Антон "Palant" Палихов
 > ### РЕАКЦИИ
 >
 > **_Парирование._** Дроу добавляет +2(1к4) к КЗ против одной атаки ближнего боя, которая должна попасть по нему. Для этого дроу должен видеть атакующего и использовать оружие ближнего боя.
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
+
+[Core d20 RPG - Бестиарий - Общие правила](https://cyborgsandmages.com/posts/cored20rpg/bestiary-rules))
+
+[Core d20 RPG - Бестиарий - Виды существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-creature-types))
+
+[Core d20 RPG - Бестиарий - Неигровые персонажи](https://cyborgsandmages.com/posts/cored20rpg/bestiary-npc))
+
+[Core d20 RPG - Бестиарий - Типовые особенности существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-traits)
+
+[Core d20 RPG - Бестиарий - Типовые Действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-actions)
+
+[Core d20 RPG - Бестиарий - Типовые Бонусные Действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-bonus-actions)
+
+[Core d20 RPG - Бестиарий - Типовые реакции существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-reactions)
+
+[Core d20 RPG - Бестиарий - Типовые Легендарные Действия существ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-legendary-actions)
+
+[Core d20 RPG - Бестиарий - Опции персонажей для неигровых персонаажей](https://cyborgsandmages.com/posts/cored20rpg/bestiary-pc-options-for-npc)
+
+[Core d20 RPG - Бестиарий - Типовые шаблоны](https://cyborgsandmages.com/posts/cored20rpg/bestiary-templates)
+
+[Core d20 RPG - Бестиарий - ФОРМАТ СТАТБЛОКА](/posts/cored20rpg/bestiary-statblock)
+
+[Core d20 RPG - Бестиарий](https://cyborgsandmages.com/posts/core-d20/bestiary)
+
+---
+
+[Core d20 RPG - Бестиарий - текущая версия](https://1drv.ms/w/s!Atcrhwwo1lBA5JRFT2Ce_TYOF5UAEg?e=OkpOIj)
+
+
+---
+
+[ПРО КОМАНДИРОВ И СОЛДАТ](https://cyborgsandmages.com/posts/core-d20/about-commanders-and-units)
+
+---
+
+[E5E BESTIARY REV 13](https://1drv.ms/w/s!Atcrhwwo1lBA2YMLOf2_oW923CRzlw?e=zKguUK)
+
+[E5E BESTIARY REV 12](https://1drv.ms/w/s!Atcrhwwo1lBA1_AFBntbrfdY9VE5-A?e=i427eK)
+
+[ADDITIONAL STATBLOCKS](https://1drv.ms/w/s!Atcrhwwo1lBA19xPShMJ5qjesqPpaA?e=IkqJmE)
 
 ---
 
