--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -115,12 +115,30 @@ v.026
 
 ## БЕСТИАРИЙ
 
+[CORE D20 RPG - БЕСТИАРИЙ](https://cyborgsandmages.com/posts/cored20rpg/bestiary)
+
+[CORE D20 RPG - БЕСТИАРИЙ-1](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
+
 1.  [ВИДЫ СУЩЕСТВ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-creatures-types)
-2.  ОСОБЕННОСТИ ВИДОВ СУЩЕСТВ
-3.  ШАБЛОНЫ
-4.  Звери
-5.  Неигровые персонажи
-6.  
+   
+2.  [СТАТБЛОК](https://cyborgsandmages.com/posts/cored20rpg/bestiary-statblock)
+   
+3.  ОСОБЕННОСТИ ВИДОВ СУЩЕСТВ
+   
+4.  [ШАБЛОНЫ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-templates)
+   
+5.  [ДЕЙСТВИЯ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-actions)
+   
+6.  [ОСОБЕННОСТИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-traits)
+
+
+[Бестиарий начало](https://cyborgsandmages.com/posts/core-d20/bestiary-beginnings)
+
+[Бестиарий - вервольф](https://cyborgsandmages.com/posts/core-d20/bestiary-werewolf-expert)
+
+[Бестиарий ](https://cyborgsandmages.com/posts/core-d20/bestiary)
+[Шаблон - Боевой зверь](https://cyborgsandmages.com/posts/core-d20/bestiary-warbeast-template)
+[Шаблон - Лютый](https://cyborgsandmages.com/posts/core-d20/bestiary-dire-template)
 
 
 ---
